--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
         "@inertiajs/inertia-react": "^0.5.5",
         "@types/react": "^17.0.3",
         "ts-loader": "^8.1.0",
-        "typescript": "^4.2.3"
+        "typescript": "^4.2.3",
+        "ziggy-js": "^0.9.4",
+        "@types/ziggy-js": "^0.9.0"
     }
 }
